fix: fix album spacing css

--- a/assets/css/jekyll-theme-chirpy.scss
+++ b/assets/css/jekyll-theme-chirpy.scss
@@ -67,6 +67,37 @@
   color: var(--text-muted-color);
 }
 
+.content section.album {
+  margin: 0;
+  justify-items: stretch;
+
+  .popup {
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    align-items: center;
+
+    @extend %rounded;
+
+    &:not(.no-bg) {
+      background: var(--img-bg);
+    }
+
+    img {
+      width: 100%;
+      height: 100%;
+      -o-object-fit: cover;
+      object-fit: cover;
+
+      @extend %rounded;
+
+      @at-root #post-list & {
+        width: 100%;
+      }
+    }
+  }
+}
+
 html {
   @media (prefers-color-scheme: light) {
     &:not([data-mode]),
